<resources>
    <string name="app_name">DigiBins</string>
    <string name="image">image</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="search_hint">Search a place or landmark</string>
    <string name="dumping_vans">Dumping vans</string>
    <string name="request_area_cleaning">Request Area Cleaning</string>
    <string name="locate_dump_vans">Locate Dump Vans</string>
    <string name="locate_smart_bins">Locate Smart Bins</string>
    <string name="request">Request</string>
    <string name="area_cleaning">Area Cleaning</string>
    <string name="name_hint">Enter your name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_locate">LocateActivity</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="about_app">DIGIBins is a medium of communication between the people of the city (users) and government. It is a platform where users can track , request and find garbage vans for cleanliness purposes. Through this app every user can contribute their bit in this righteous act of ‘SWACHH BHARAT ABHIYAN’ initiated by our Hon’ble prime minister Shri Narenda Modi.</string>
</resources>