<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:src="@drawable/map_image"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/main_activity_card_background"
        android:padding="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/dumping_vans"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_baseline_search"
            android:paddingHorizontal="12dp"
            android:hint="@string/search_hint"
            android:textColorHint="@color/onyx"
            android:drawablePadding="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/button_background_primary"
                    android:backgroundTint="@color/sea_green"
                    android:src="@drawable/request_clean"
                    android:padding="14dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_area_cleaning"
                    android:gravity="center"
                    android:textColor="?attr/colorOnPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/button_background_primary"
                    android:backgroundTint="@color/sunray"
                    android:src="@drawable/dumping_van"
                    android:padding="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locate_dump_vans"
                    android:gravity="center"
                    android:textColor="?attr/colorOnPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/button_background_primary"
                    android:backgroundTint="@color/brick_red"
                    android:src="@drawable/smart_bins"
                    android:padding="14dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locate_smart_bins"
                    android:gravity="center"
                    android:textColor="?attr/colorOnPrimary"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>