<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AreaCleaningRequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingHorizontal="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/request"
            android:textStyle="bold"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_cleaning"
            android:textStyle="bold"
            android:textSize="42sp"
            android:textColor="@color/sea_green"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:textColorHint="@color/onyx"
            android:textColor="@color/erie_black"/>

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:paddingHorizontal="12dp"
            android:textColorHint="@color/onyx"
            android:textColor="@color/erie_black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_my_location"
            android:drawablePadding="12dp"
            android:paddingHorizontal="12dp"
            android:text="Location"
            android:textColor="@color/onyx"
            android:gravity="center_vertical"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:src="@drawable/ic_photo_camera"/>

    </LinearLayout>

</ScrollView>